--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,15 +19,15 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scripts/Player/")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://script_templates/", "res://script_templates/State/", "res://Scripts/Player/")
+dock_filesystem_selected_paths=PackedStringArray("res://Scenes/Game.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://script_templates/", "res://script_templates/State/", "res://Scripts/", "res://Scenes/", "res://Autoload/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/MainMenu.tscn", "res://Scenes/Game.tscn", "res://Scenes/Block.tscn", "res://Scenes/Player.tscn")
+open_scenes=PackedStringArray("res://Scenes/Game.tscn", "res://Scenes/Player.tscn")
 current_scene="res://Scenes/Player.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
@@ -36,8 +36,8 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/Player/Fall.gd", "res://Scripts/Player/FSM.gd", "res://Scripts/Player/Idle.gd", "res://Scripts/MainMenu.gd", "res://script_templates/State/NewState.gd", "res://Scripts/Player/Player.gd", "res://Scripts/Player/Rise.gd", "res://Scripts/Player/Run.gd", "res://Scripts/Player/State.gd"]
-selected_script="res://Scripts/Player/Player.gd"
+open_scripts=["res://Scripts/Player/Fall.gd", "res://Scripts/Player/FallingStart.gd", "res://Scripts/Player/FSM.gd", "res://Scripts/Player/Player.gd", "res://Scripts/Player/RisingStop.gd", "res://Scripts/Player/State.gd"]
+selected_script="res://Scripts/Player/RisingStop.gd"
 open_help=[]
 script_split_offset=140
 list_split_offset=0
@@ -47,3 +47,13 @@ list_split_offset=0
 open_shaders=[]
 split_offset=0
 selected_shader=""
+
+[editor_log]
+
+log_filter_0=true
+log_filter_2=true
+log_filter_1=true
+log_filter_3=true
+log_filter_4=true
+collapse=true
+show_search=true
