--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -31,15 +31,15 @@ open_scenes=PackedStringArray("res://Scenes/Game.tscn", "res://Scenes/Player.tsc
 current_scene="res://Scenes/Player.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=0
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/Player/Fall.gd", "res://Scripts/Player/FallingStart.gd", "res://Scripts/Player/FSM.gd", "res://Scripts/Player/Player.gd", "res://Scripts/Player/RisingStop.gd", "res://Scripts/Player/State.gd"]
-selected_script="res://Scripts/Player/RisingStop.gd"
-open_help=[]
-script_split_offset=140
+open_scripts=["res://Scripts/Player/Fall.gd", "res://Scripts/Player/FallingStart.gd", "res://Scripts/Player/FSM.gd", "res://Scripts/Player/Idle.gd", "res://Scripts/Player/Player.gd", "res://Scripts/Player/Rise.gd", "res://Scripts/Player/RisingStop.gd", "res://Scripts/Player/Run.gd", "res://Scripts/Player/State.gd"]
+selected_script="res://Scripts/Player/Run.gd"
+open_help=["CharacterBody2D"]
+script_split_offset=417
 list_split_offset=0
 
 [ShaderEditor]
