--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -13,13 +13,13 @@ dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=540
-dock_hsplit_3=-540
+dock_hsplit_3=-456
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scenes/Game.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://script_templates/State/NewState.gd")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://script_templates/", "res://script_templates/State/", "res://Scripts/", "res://Scenes/", "res://Autoload/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -36,9 +36,9 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/Player/Fall.gd", "res://Scripts/Player/FallingStart.gd", "res://Scripts/Player/FSM.gd", "res://Scripts/Player/Idle.gd", "res://Scripts/Player/Player.gd", "res://Scripts/Player/Rise.gd", "res://Scripts/Player/RisingStop.gd", "res://Scripts/Player/Run.gd", "res://Scripts/Player/State.gd"]
-selected_script="res://Scripts/Player/Run.gd"
-open_help=["CharacterBody2D"]
+open_scripts=["res://Scripts/Player/AirGrappleFire.gd", "res://Scripts/Player/AirGrappleHold.gd", "res://Scripts/Player/Fall.gd", "res://Scripts/Player/FallingStart.gd", "res://Scripts/Player/FSM.gd", "res://Scripts/Player/Idle.gd", "res://script_templates/State/NewState.gd", "res://Scripts/Player/Player.gd", "res://Scripts/Player/Rise.gd", "res://Scripts/Player/RisingStop.gd", "res://Scripts/Player/Run.gd", "res://Scripts/Player/Skid.gd", "res://Scripts/Player/State.gd", "res://Autoload/SceneManager/TransitionColorRect.gd"]
+selected_script="res://Scripts/Player/Player.gd"
+open_help=["@GlobalScope", "CharacterBody2D", "Curve", "Vector2"]
 script_split_offset=417
 list_split_offset=0
 
