--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -31,13 +31,13 @@ open_scenes=PackedStringArray("res://Scenes/Game.tscn", "res://Scenes/Player.tsc
 current_scene="res://Scenes/Player.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
 open_scripts=["res://Scripts/Player/AirGrappleFire.gd", "res://Scripts/Player/AirGrappleHold.gd", "res://Scripts/Player/Fall.gd", "res://Scripts/Player/FallingStart.gd", "res://Scripts/Player/FSM.gd", "res://Scripts/Player/Idle.gd", "res://script_templates/State/NewState.gd", "res://Scripts/Player/Player.gd", "res://Scripts/Player/Rise.gd", "res://Scripts/Player/RisingStop.gd", "res://Scripts/Player/Run.gd", "res://Scripts/Player/Skid.gd", "res://Scripts/Player/State.gd", "res://Autoload/SceneManager/TransitionColorRect.gd"]
-selected_script="res://Scripts/Player/Player.gd"
+selected_script="res://Scripts/Player/AirGrappleFire.gd"
 open_help=["@GlobalScope", "CharacterBody2D", "Curve", "Vector2"]
 script_split_offset=417
 list_split_offset=0
