--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,7 +19,7 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://script_templates/State/NewState.gd")
+dock_filesystem_selected_paths=PackedStringArray("res://Autoload/NoiseManager.gd")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://script_templates/", "res://script_templates/State/", "res://Scripts/", "res://Scenes/", "res://Autoload/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -27,8 +27,8 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/Game.tscn", "res://Scenes/Player.tscn")
-current_scene="res://Scenes/Game.tscn"
+open_scenes=PackedStringArray("res://Scenes/Game.tscn", "res://Scenes/Player.tscn", "res://Scenes/Block.tscn")
+current_scene="res://Scenes/Player.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
@@ -36,9 +36,9 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/Player/AirGrappleFire.gd", "res://Scripts/Player/AirGrappleHold.gd", "res://Scripts/Player/Fall.gd", "res://Scripts/Player/FallingStart.gd", "res://Scripts/Player/FSM.gd", "res://Scripts/Player/Idle.gd", "res://script_templates/State/NewState.gd", "res://Scripts/Player/Player.gd", "res://Scripts/Player/Rise.gd", "res://Scripts/Player/RisingStop.gd", "res://Scripts/Player/Run.gd", "res://Scripts/Player/Skid.gd", "res://Scripts/Player/State.gd", "res://Autoload/SceneManager/TransitionColorRect.gd"]
-selected_script="res://Scripts/Player/AirGrappleHold.gd"
-open_help=["@GlobalScope", "CharacterBody2D", "Curve", "RayCast2D", "Vector2"]
+open_scripts=["res://Scripts/Player/AirGrappleFire.gd", "res://Scripts/Player/AirGrappleHold.gd", "res://Scripts/Block.gd", "res://Scripts/Player/Fall.gd", "res://Scripts/Player/FallingStart.gd", "res://Scripts/Player/FSM.gd", "res://Scripts/Player/Idle.gd", "res://script_templates/State/NewState.gd", "res://Autoload/NoiseManager.gd", "res://Scripts/Player/Player.gd", "res://Scripts/Player/Rise.gd", "res://Scripts/Player/RisingStop.gd", "res://Scripts/Player/Run.gd", "res://Scripts/Player/Skid.gd", "res://Scripts/Player/State.gd", "res://Autoload/SceneManager/TransitionColorRect.gd"]
+selected_script="res://Scripts/Player/RisingStop.gd"
+open_help=["@GDScript", "@GlobalScope", "CharacterBody2D", "Curve", "RayCast2D", "Transform2D", "Vector2"]
 script_split_offset=417
 list_split_offset=0
 
