--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -37,7 +37,7 @@ selected_bottom_panel_item=0
 [ScriptEditor]
 
 open_scripts=["res://Scripts/Player/AirGrappleFire.gd", "res://Scripts/Player/AirGrappleHold.gd", "res://Scripts/Block.gd", "res://Scripts/Player/Fall.gd", "res://Scripts/Player/FallingStart.gd", "res://Scripts/Player/FSM.gd", "res://Scripts/Player/Idle.gd", "res://script_templates/State/NewState.gd", "res://Autoload/NoiseManager.gd", "res://Scripts/Player/Player.gd", "res://Scripts/Player/Rise.gd", "res://Scripts/Player/RisingStop.gd", "res://Scripts/Player/Run.gd", "res://Scripts/Player/Skid.gd", "res://Scripts/Player/State.gd", "res://Autoload/SceneManager/TransitionColorRect.gd"]
-selected_script="res://Scripts/Player/RisingStop.gd"
+selected_script="res://Scripts/Player/Player.gd"
 open_help=["@GDScript", "@GlobalScope", "CharacterBody2D", "Curve", "RayCast2D", "Transform2D", "Vector2"]
 script_split_offset=417
 list_split_offset=0
